--- a/html/popup.html
+++ b/html/popup.html
@@ -8,8 +8,6 @@
     <body ng-controller="PopupCtrl">
         <div id="state-mask" ng-show="isLoading">{{loadingText}}</div>
 
-        <div id="state-mask" ng-show="!isAnony && isInvalidTab">Please select a valid tab</div>
-
         <div id="login-window" ng-show="isAnony">
             <div id="header">
                 <div class="logo-unlogin">Pinboard - please login</div>
@@ -43,10 +41,11 @@
                     <a class="random" href="#" title="Random unread item" ng-click="openUrl('http:pinboard.in/random/?type=unread')">R</a>
                     <a class="option" href="#" title="Options" ng-click="openOptions()">O</a>
                 </div>
-                <div class="alert" ng-show="pageInfo.isSaved">{{renderSavedTime(pageInfo.time)}}</div>
+                <div class="alert alert-error" ng-show="isPostError && !isLoading">{{postErrorText}}</div>
+                <div class="alert" ng-show="pageInfo.isSaved && !isPostError && !isLoading">{{renderSavedTime(pageInfo.time)}}</div>
                 <div class="logout">[<a href="#" ng-click="logout()">log out</a>]</div>
             </div>
-            <form id="add-post-form" ng-submit="postSubmit()" ng-show="!isInvalidTab">
+            <form id="add-post-form" ng-submit="postSubmit()" ng-show="!isLoading">
                 <ul>
                     <li>
                         <label class="item-title">URL</label>
