update angularjs/jquery/underscore libraries

--- a/html/options.html
+++ b/html/options.html
@@ -30,7 +30,7 @@
             <label for="use-blockquote">Wrap selected text on a page with <code>&lt;blockquote&gt;</code> in the Notes field</label>
         </p>
     </section>
-    <script type="text/javascript" src="/js/libs/jquery-1.10.1.min.js"></script>
+    <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
     <script type="text/javascript" src="/js/common.js"></script>
     <script type="text/javascript" src="/js/utils.js"></script>
     <script type="text/javascript" src="/js/options.js"></script>
