--- a/html/popup.html
+++ b/html/popup.html
@@ -100,7 +100,7 @@
                 <li ng-repeat="item in autoCompleteItems" ng-class="{active: item.isActive == true}">{{item.text}}</li>
             </ul>
         </div>
-        <script type="text/javascript" src="/js/libs/jquery-1.10.1.min.js"></script>
+        <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
         <script type="text/javascript" src="/js/libs/angular.min.js"></script>
         <script type="text/javascript" src="/js/libs/underscore-min.js"></script>
         <script type="text/javascript" src="/js/common.js"></script>
