--- a/html/popup.html
+++ b/html/popup.html
@@ -6,6 +6,7 @@
         <link href="/css/libs/angular-csp.css" rel="stylesheet" type="text/css">
     </head>
     <body ng-controller="PopupCtrl">
+        <div id="wrapper">
         <div id="state-mask" ng-show="isLoading">{{loadingText}}</div>
 
         <div id="login-window" ng-show="isAnony">
@@ -15,17 +16,17 @@
             <form id="login-form" ng-submit="loginSubmit()" ng-show="!isLoading">
                 <ul>
                     <li id="login-error" ng-show="isLoginError">
-                        <span style="color:red;">Login Failed.</span>
+                        <span>Login Failed.</span>
                     </li>
                     <li>
-                        <span style="width: 60px;display: inline-block;">API Token:</span>
+                        <label class="item-title">API Token</label>
                         <input id="token" name="token" type="text" size="50" ng-model="userLogin.authToken" placeholder="API Token"/>
-                        <div class="meta">
+                        <div class="meta clear">
                             You can find API token on your <a href="#" title="Pinboard Password page" ng-click="openUrl('https://pinboard.in/settings/password')">Pinboard Password page</a>.
                         </div>
                     </li>
                     <li>
-                        <input id="login" type="submit" value="log in" style="margin-left: 60px" />
+                        <input id="login-btn" type="submit" value="log in" />
                     </li>
                 </ul>
             </form>
@@ -49,22 +50,22 @@
                 <ul>
                     <li>
                         <label class="item-title">URL</label>
-                        <input id="url" type="text" style="width:420px" ng-model="pageInfo.url"/>
+                        <input id="url" type="text" ng-model="pageInfo.url"/>
                     </li>
                     <li>
                         <label class="item-title">Title</label>
-                        <input id="title" type="text" style="width:420px" ng-model="pageInfo.title"/>
+                        <input id="title" type="text" ng-model="pageInfo.title"/>
                     </li>
                     <li>
                         <label class="item-title">Notes</label>
-                        <textarea id="desc" style="width:420px" rows="4" ng-model="pageInfo.desc"></textarea>
-                        <div id="blockquote-hint" ng-show="isQuoteHintShown">
+                        <textarea id="desc" rows="4" ng-model="pageInfo.desc"></textarea>
+                        <div id="blockquote-hint" ng-show2="isQuoteHintShown">
                             Text in &lt;blockquote&gt; will be displayed as cited text in Pinboard.
                         </div>
                     </li>
                     <li>
                         <label class="item-title">Tags</label>
-                        <input id="tag" type="text" style="width:420px" autofocus="autofocus" ng-model="pageInfo.tag" ng-change="showAutoComplete()" ng-keydown="chooseTag($event)"/>
+                        <input id="tag" type="text" autofocus="autofocus" ng-model="pageInfo.tag" ng-change="showAutoComplete()" ng-keydown="chooseTag($event)"/>
                     </li>
                     <li ng-show="suggests.length > 0">
                         <label class="item-title">Suggest</label>
@@ -74,21 +75,21 @@
                             <a href="#" id="add-all" ng-click="addTags(suggests)">Add all</a>
                         </div>
                     </li>
-                    <li>
+                    <li class="nomargin">
+                        <label class="item-title"></label>
                         <input type="checkbox" name="private" id="private" ng-model="pageInfo.isPrivate" ng-checked="pageInfo.isPrivate">
-                        <label style="display:inline" for="private">private</label>
+                        <label for="private">private</label>
                         <input type="checkbox" name="toread" id="toread" ng-model="pageInfo.toread" ng-checked="pageInfo.toread">
-                        <label style="display:inline" for="toread">read later</label>
+                        <label for="toread">read later</label>
                     </li>
-                    <li>
+                    <li class="nomargin">
+                        <label class="item-title"></label>
                         <input id="submit" type="submit" value="Submit" />
-                        &nbsp;&nbsp;&nbsp;
                         <span>
-                            <a id="delete" href="#" style="text-decoration: none;color: #11A" ng-show="pageInfo.isSaved" ng-hide="isShowDeleteConfirm" ng-click="showDeleteConfirm()">delete</a>
+                            <a id="delete" class="opt" href="#" ng-show="pageInfo.isSaved" ng-hide="isShowDeleteConfirm" ng-click="showDeleteConfirm()">delete</a>
                             <span class="confirm" ng-show="isShowDeleteConfirm">
-                                <a id="cancel-delete" href="#" ng-click="isShowDeleteConfirm=false">cancel</a>
-                                &nbsp;/&nbsp;
-                                <a id="destroy" href="#" style="color:red" ng-click="postDelete()">destroy</a>
+                                <a id="cancel-delete" class="opt" href="#" ng-click="isShowDeleteConfirm=false">cancel</a> /
+                                <a id="destroy" href="#" class="opt opt-destroy" ng-click="postDelete()">destroy</a>
                             </span>
                         </span>
                     </li>
@@ -99,6 +100,7 @@
             <ul>
                 <li ng-repeat="item in autoCompleteItems" ng-class="{active: item.isActive == true}">{{item.text}}</li>
             </ul>
+        </div>
         </div>
         <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
         <script type="text/javascript" src="/js/libs/angular.min.js"></script>
