--- a/html/popup.html
+++ b/html/popup.html
@@ -59,7 +59,7 @@
                     <li>
                         <label class="item-title">Notes</label>
                         <textarea id="desc" rows="4" ng-model="pageInfo.desc"></textarea>
-                        <div id="blockquote-hint" ng-show2="isQuoteHintShown">
+                        <div id="blockquote-hint" ng-show="isQuoteHintShown">
                             Text in &lt;blockquote&gt; will be displayed as cited text in Pinboard.
                         </div>
                     </li>
