--- a/html/popup.html
+++ b/html/popup.html
@@ -1,112 +1,104 @@
 <!doctype html>
-<html ng-app="popupApp" ng-csp>
-    <head>
-        <meta charset="utf-8">
-        <link href="/css/popup.css" rel="stylesheet" type="text/css">
-        <link href="/css/libs/angular-csp.css" rel="stylesheet" type="text/css">
-    </head>
-    <body ng-controller="PopupCtrl">
-        <div id="wrapper">
-        <div id="state-mask" ng-show="isLoading">{{loadingText}}</div>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Pinboard+</title>
+    <link href="../css/popup.css" rel="stylesheet" type="text/css">
+</head>
 
-        <div id="login-window" ng-show="isAnony">
-            <div id="header">
-                <div class="logo-unlogin">Pinboard - please login</div>
-            </div>
-            <form id="login-form" ng-submit="loginSubmit()" ng-show="!isLoading">
-                <ul>
-                    <li id="login-error" ng-show="isLoginError">
-                        <span>Login Failed.</span>
-                    </li>
-                    <li>
-                        <label class="item-title">API Token</label>
-                        <input id="token" name="token" type="text" size="50" ng-model="userLogin.authToken" placeholder="API Token"/>
-                        <div class="meta clear">
-                            You can find API token on your <a href="#" title="Pinboard Password page" ng-click="openUrl('https://pinboard.in/settings/password')">Pinboard Password page</a>.
-                        </div>
-                    </li>
-                    <li>
-                        <input id="login-btn" type="submit" value="log in" />
-                    </li>
-                </ul>
-            </form>
-        </div>
+<body>
+    <div id="wrapper">
+    <div id="state-mask"></div>
 
-        <div id="bookmark-window" ng-show="!isAnony">
-            <div id="header">
-                <div class="logo">
-                    <a id="logo-link" href="#" title="Click to open Pinboard.in"
-                       ng-click="openUrl('http:pinboard.in/')">
-                        Pinboard - (<span id="user">{{userInfo.name}}</span>)
-                    </a>
-                    <a class="random" href="#" title="Random unread item" ng-click="openUrl('http:pinboard.in/random/?type=unread')">R</a>
-                    <a class="option" href="#" title="Options" ng-click="openOptions()">O</a>
-                </div>
-                <div class="alert alert-error" ng-show="isPostError && !isLoading">{{postErrorText}}</div>
-                <div class="alert" ng-show="pageInfo.isSaved && !isPostError && !isLoading">{{renderSavedTime(pageInfo.time)}}</div>
-                <div class="logout">[<a href="#" ng-click="logout()">log out</a>]</div>
-            </div>
-            <form id="add-post-form" ng-submit="postSubmit()" ng-show="!isLoading">
-                <ul>
-                    <li>
-                        <label class="item-title">URL</label>
-                        <input id="url" type="text" ng-model="pageInfo.url"/>
-                    </li>
-                    <li>
-                        <label class="item-title">Title</label>
-                        <input id="title" type="text" ng-model="pageInfo.title"/>
-                    </li>
-                    <li>
-                        <label class="item-title">Notes</label>
-                        <textarea id="desc" rows="4" ng-model="pageInfo.desc"></textarea>
-                        <div id="blockquote-hint" ng-show="isQuoteHintShown">
-                            Text in &lt;blockquote&gt; will be displayed as cited text in Pinboard.
-                        </div>
-                    </li>
-                    <li>
-                        <label class="item-title">Tags</label>
-                        <input id="tag" type="text" autofocus="autofocus" ng-model="pageInfo.tag" ng-change="showAutoComplete()" ng-keydown="chooseTag($event)"/>
-                    </li>
-                    <li ng-show="suggests.length > 0">
-                        <label class="item-title">Suggest</label>
-                        <div id="suggest">
-                            <a href="#" ng-class="{'selected':pageInfo.tag.split(' ').indexOf(suggest) != -1}"
-                               ng-repeat="suggest in suggests" ng-click="addTags([suggest])">{{suggest}}</a>
-                            <a href="#" id="add-all" ng-click="addTags(suggests)">Add all</a>
-                        </div>
-                    </li>
-                    <li class="nomargin">
-                        <label class="item-title"></label>
-                        <input type="checkbox" name="private" id="private" ng-model="pageInfo.isPrivate" ng-checked="pageInfo.isPrivate">
-                        <label for="private">private</label>
-                        <input type="checkbox" name="toread" id="toread" ng-model="pageInfo.toread" ng-checked="pageInfo.toread">
-                        <label for="toread">read later</label>
-                    </li>
-                    <li class="nomargin">
-                        <label class="item-title"></label>
-                        <input id="submit" type="submit" value="Submit" />
-                        <span>
-                            <a id="delete" class="opt" href="#" ng-show="pageInfo.isSaved" ng-hide="isShowDeleteConfirm" ng-click="showDeleteConfirm()">delete</a>
-                            <span class="confirm" ng-show="isShowDeleteConfirm">
-                                <a id="cancel-delete" class="opt" href="#" ng-click="isShowDeleteConfirm=false">cancel</a> /
-                                <a id="destroy" href="#" class="opt opt-destroy" ng-click="postDelete()">destroy</a>
-                            </span>
-                        </span>
-                    </li>
-                </ul>
-            </form>
+    <div id="login-window">
+        <div id="header">
+            <div class="logo-unlogin">Pinboard - please login</div>
         </div>
-        <div class="auto-complete" ng-show="isShowAutoComplete && !isLoading" ng-style="autoCompleteStyle">
+        <form id="login-form">
             <ul>
-                <li ng-repeat="item in autoCompleteItems" ng-class="{active: item.isActive == true}">{{item.text}}</li>
+                <li id="login-error">
+                    <span>Login Failed.</span>
+                </li>
+                <li>
+                    <label class="item-title">API Token</label>
+                    <input id="token" name="token" type="text" size="50" placeholder="API Token"/>
+                    <div class="meta clear">
+                        You can find API token on your
+                        <a class="link" title="Pinboard Password page"
+                           href="https://pinboard.in/settings/password">Pinboard Password page</a>.
+                    </div>
+                </li>
+                <li>
+                    <input id="login-btn" type="submit" value="log in" />
+                </li>
             </ul>
+        </form>
+    </div>
+
+    <div id="bookmark-window" ng-show="!isAnony">
+        <div id="header">
+            <div class="logo">
+                <a id="logo-link" class="link" title="Click to open Pinboard.in"
+                   href="https://pinboard.in/">Pinboard - (<span id="username"></span>)
+                </a>
+                <a class="random link" title="Random unread item" href="https://pinboard.in/random/?type=unread">R</a>
+            </div>
+            <div class="alert alert-error"></div>
+            <div class="alert alert-savetime"></div>
+            <div class="logout">[<a href="#">log out</a>]</div>
         </div>
-        </div>
-        <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
-        <script type="text/javascript" src="/js/libs/angular.min.js"></script>
-        <script type="text/javascript" src="/js/libs/underscore-min.js"></script>
-        <script type="text/javascript" src="/js/common.js"></script>
-        <script type="text/javascript" src="/js/utils.js"></script>
-        <script type="text/javascript" src="/js/popup.js"></script>
-    </body>
+        <form id="add-post-form">
+            <ul>
+                <li>
+                    <label class="item-title">URL</label>
+                    <input id="url" type="text" value="" />
+                </li>
+                <li>
+                    <label class="item-title">Title</label>
+                    <input id="title" type="text" value="" />
+                </li>
+                <li>
+                    <label class="item-title">Notes</label>
+                    <textarea id="desc" rows="4"></textarea>
+                    <div id="blockquote-hint">
+                        Text in &lt;blockquote&gt; will be displayed as cited text in Pinboard.
+                    </div>
+                </li>
+                <li>
+                    <label class="item-title">Tags</label>
+                    <input id="tag" type="text" autofocus="autofocus" />
+                </li>
+                <li id="suggest-list" style="display: none;">
+                    <label class="item-title">Suggest</label>
+                    <div id="suggest"></div>
+                </li>
+                <li class="nomargin">
+                    <label class="item-title"></label>
+                    <input type="checkbox" name="private" id="private" />
+                    <label for="private">private</label>
+                    <input type="checkbox" name="toread" id="toread" />
+                    <label for="toread">read later</label>
+                </li>
+                <li class="nomargin">
+                    <label class="item-title"></label>
+                    <input id="submit" type="submit" value="Submit" />
+                    <span>
+                        <a id="opt-delete" class="opt" href="#" style="display: none;">delete</a>
+                        <span id="opt-confirm" style="display: none;">
+                            <a id="opt-cancel-delete" class="opt" href="#">cancel</a> /
+                            <a id="opt-destroy" href="#" class="opt opt-destroy">destroy</a>
+                        </span>
+                    </span>
+                </li>
+            </ul>
+        </form>
+    </div>
+    <div id="auto-complete">
+        <ul></ul>
+    </div>
+    </div>
+    <script type="text/javascript" src="../js/libs/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
+    <script type="text/javascript" src="../js/popup.js"></script>
+</body>
 </html>
