add addpost and deletepost

--- a/html/popup.html
+++ b/html/popup.html
@@ -43,8 +43,8 @@
                 </a>
                 <a class="random link" title="Random unread item" href="https://pinboard.in/random/?type=unread">R</a>
             </div>
-            <div class="alert alert-error"></div>
-            <div class="alert alert-savetime"></div>
+            <div class="alert alert-error" style="display: none;"></div>
+            <div class="alert alert-savetime" style="display: none;"></div>
             <div class="logout">[<a href="#">log out</a>]</div>
         </div>
         <form id="add-post-form">
