--- a/html/popup.html
+++ b/html/popup.html
@@ -42,6 +42,7 @@
                    href="https://pinboard.in/">Pinboard - (<span id="username"></span>)
                 </a>
                 <a class="random link" title="Random unread item" href="https://pinboard.in/random/?type=unread">R</a>
+                <a class="option" href="#" title="Options">O</a>
             </div>
             <div class="alert alert-error" style="display: none;"></div>
             <div class="alert alert-savetime" style="display: none;"></div>
