--- a/html/options.html
+++ b/html/options.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Pinboard+ Options</title>
-    <link href="/css/options.css" rel="stylesheet" type="text/css">
+    <link href="../css/options.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <header>
         <h1>
-            <img src="/img/appicon_48.png"/>
             Pinboard+ Options
         </h1>
     </header>
@@ -16,7 +15,6 @@
         <p>
             <span class="checkbox"><input type="checkbox" id="no-ping" /></span>
             <label for="no-ping">Do not check if page has already been bookmarked</label>
-            <br/>
             <span class="meta">
                 (Stop pinging the Pinboard API; Icon will be grey)
             </span>
@@ -24,10 +22,6 @@
         <p>
             <span class="checkbox"><input type="checkbox" id="all-private" /></span>
             <label for="all-private">Private checkbox checked by default</label>
-        </p>
-        <p>
-            <span class="checkbox"><input type="checkbox" id="use-blockquote" /></span>
-            <label for="use-blockquote">Wrap selected text on a page with <code>&lt;blockquote&gt;</code> in the Notes field</label>
         </p>
     </section>
     <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
