Add page action functionality. Includes toggle in options.html.

--- a/html/options.html
+++ b/html/options.html
@@ -23,6 +23,13 @@
             <span class="checkbox"><input type="checkbox" id="all-private" /></span>
             <label for="all-private">Private checkbox checked by default</label>
         </p>
+        <p>
+            <span class="checkbox"><input type="checkbox" id="no-page-action" /></span>
+            <label for="no-page-action">Do not show icon inside location URL bar</label>
+            <span class="meta">
+                (Restart extension to apply changes)
+            </span>
+        </p>
     </section>
     <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
     <script type="text/javascript" src="/js/common.js"></script>
