disable default autocomplete in popup

--- a/html/popup.html
+++ b/html/popup.html
@@ -67,7 +67,7 @@
                 </li>
                 <li>
                     <label class="item-title">Tags</label>
-                    <input id="tag" type="text" autofocus="autofocus" />
+                    <input id="tag" type="text" autofocus="autofocus" autocomplete="off" />
                 </li>
                 <li id="suggest-list" style="display: none;">
                     <label class="item-title">Suggest</label>
