Add filter suggested tags option

--- a/html/options.html
+++ b/html/options.html
@@ -30,6 +30,14 @@
                 (Restart extension to apply changes)
             </span>
         </p>
+        <p class="tag-filter">
+            <label for="tag-filter">Exclude these tags from the suggested tags list:</label>
+            <span class="meta">
+                (Separate tags by comma)
+            </span>
+            <textarea id="tag-filter" rows="4" cols="80"></textarea>
+            <button id="tag-filter-save">Save tags filter</button>
+        </p>
     </section>
     <script type="text/javascript" src="/js/libs/jquery.min.js"></script>
     <script type="text/javascript" src="/js/common.js"></script>
