auto fetch page description from selection or html meta
Signed-off-by: lostsnow <lostsnow@gmail.com>

--- a/html/options.html
+++ b/html/options.html
@@ -24,6 +24,10 @@
             <label for="all-private">Private checkbox checked by default</label>
         </p>
         <p>
+            <span class="checkbox"><input type="checkbox" id="use-blockquote" /></span>
+            <label for="use-blockquote">Wrap selected text on a page with <code>&lt;blockquote&gt;</code> in the Notes field</label>
+        </p>
+        <p>
             <span class="checkbox"><input type="checkbox" id="no-page-action" /></span>
             <label for="no-page-action">Do not show icon inside location URL bar</label>
             <span class="meta">
