increase notes height, change popup to auto height
Signed-off-by: lostsnow <lostsnow@gmail.com>

--- a/html/popup.html
+++ b/html/popup.html
@@ -8,7 +8,6 @@
 
 <body>
     <div id="wrapper">
-    <div id="state-mask"></div>
 
     <div id="login-window">
         <div id="header">
@@ -35,7 +34,7 @@
         </form>
     </div>
 
-    <div id="bookmark-window" ng-show="!isAnony">
+    <div id="bookmark-window">
         <div id="header">
             <div class="logo">
                 <a id="logo-link" class="link" title="Click to open Pinboard.in"
@@ -94,6 +93,9 @@
             </ul>
         </form>
     </div>
+
+    <div id="state-mask"></div>
+
     <div id="auto-complete">
         <ul></ul>
     </div>
